[package]
name = "mosaic"
version = "0.1.0"
edition = "2021"

[lib]
name = "mosaic"
path = "src/lib.rs"

[[bin]]
name = "mosaic"
path = "src/bin.rs"

[dependencies]
image = "0.24.7"
palette = "0.7.3"
png = "0.17.9"
rand = "0.8.5"

[dependencies.kmeans_colors]
version = "0.6"
features = ["palette_color"]
